# panito

./: .gitignore  LICENSE  README.md  configure.ac
src/: Makefile.am  gwani.c  gwani.h  identity_result.h  main.c  run-all-tests
tests/: check-panito.c  check-panito.h  run-all-tests.c
tests/.deps/: run_all_tests-check-panito.Po  run_all_tests-run-all-tests.Po
tests/data/: small_all_same.aln  small_some_variation.aln  small_variable_length.aln
